Fix: backface-visibility, mobile nav postion

--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -147,3 +147,9 @@
     padding-top: 5rem;
   }
 }
+
+@mixin backface-visibility {
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
