--- a/styles/card.module.scss
+++ b/styles/card.module.scss
@@ -5,9 +5,7 @@
 %plane {
   width: 100%;
   height: 100%;
-  -moz-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+  @include backface-visibility();
   position: absolute;
   @include flex-center();
 }
@@ -17,6 +15,7 @@
   transform-style: preserve-3d;
   -webkit-transform-origin: center right;
   transform-origin: center right;
+  @include backface-visibility();
   @include transition(transform, 0.7s, ease);
   position: relative;
   width: 8rem;
@@ -36,6 +35,7 @@
       width: 80%;
       height: 80%;
       img {
+        @include backface-visibility();
         width: 100%;
         height: 100%;
         display: block;
@@ -56,6 +56,7 @@
     border-radius: 19px;
 
     &::before {
+      @include backface-visibility();
       position: absolute;
       width: 80%;
       height: 80%;
