--- a/styles/gnb.module.scss
+++ b/styles/gnb.module.scss
@@ -204,7 +204,7 @@
 }
 
 .mobile {
-  position: fixed;
+  position: absolute;
   width: 100vw;
   min-width: $mixin-middle-width;
   z-index: 1;
